--- a/pom.xml
+++ b/pom.xml
@@ -1,58 +1,80 @@
 <project>
    <modelVersion>4.0.0</modelVersion>
+
    <groupId>root</groupId>
    <version>1.0</version>
    <artifactId>project</artifactId>
+
    <packaging>pom</packaging>
    <name>project</name>
+
    <modules>
    </modules>
+
+   <properties>
+      <java.version>1.8</java.version>
+   </properties>
+
+   <dependencies>
+      <dependency>
+         <groupId>cglib</groupId>
+         <artifactId>cglib</artifactId>
+         <version>3.2.5</version>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>org.springframework.aop</artifactId>
+         <version>3.2.4.RELEASE</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.shiro</groupId>
+         <artifactId>shiro-core</artifactId>
+         <version>1.4.0</version>
+      </dependency>
+   </dependencies>
+
+   <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.5.1</version>
+      <configuration>
+         <source>${java.version}</source>
+         <target>${java.version}</target>
+         <encoding>UTF-8</encoding>
+      </configuration>
+   </plugin>
    <build>
-      <pluginManagement>
          <plugins>
             <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-site-plugin</artifactId>
+               <artifactId>maven-source-plugin</artifactId>
+               <version>2.2.1</version>
                <configuration>
-<!--
-                  <unzipCommand>/usr/bin/unzip -o > err.txt</unzipCommand>
--->
+                  <attach>true</attach>
+               </configuration>
+               <executions>
+                  <execution>
+                     <phase>compile</phase>
+                     <goals>
+                        <goal>jar</goal>
+                     </goals>
+                  </execution>
+               </executions>
+            </plugin>
+
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-compiler-plugin</artifactId>
+               <version>3.5.1</version>
+               <configuration>
+                  <source>1.8</source>
+                  <target>1.8</target>
+                  <encoding>UTF-8</encoding>
+                  <verbose>true</verbose>
+                  <compilerArguments>
+                     <sourcepath>${project.basedir}/src/main/java</sourcepath>
+                  </compilerArguments>
                </configuration>
             </plugin>
          </plugins>
-      </pluginManagement>
    </build>
-   <dependencyManagement>
-      <dependencies>
-         <dependency>
-            <groupId>root.project.projects</groupId>
-            <artifactId>logging</artifactId>
-            <version>1.0</version>
-         </dependency>
-         <dependency>
-            <groupId>root.project</groupId>
-            <artifactId>primary-source</artifactId>
-            <version>1.0</version>
-         </dependency>
-         <dependency>
-            <groupId>root.project.servlets</groupId>
-            <artifactId>servlet</artifactId>
-            <version>1.0</version>
-            <type>war</type>
-         </dependency>
-         <dependency>
-            <groupId>root.project</groupId>
-            <artifactId>ejbs</artifactId>
-            <version>1.0</version>
-            <type>ejb</type>
-         </dependency>
-      </dependencies>
-   </dependencyManagement>
-   <distributionManagement>
-      <site>
-         <id>site</id>
-         <name>project website</name>
-         <url>scp://local.company.com/websites/project.company.com/</url>
-      </site>
-   </distributionManagement>
 </project>
